# FusionNet-Multi-Modal-Edge-AI

./: README.md
firmware-android/src/main/cpp/: ButterworthFilter.cpp  ButterworthFilter.hpp  CMakeLists.txt  native-lib.cpp
firmware-android/src/main/java/com/medhansh/fusionnet/: FusionDataService.kt  NativeFilter.kt
processing-python/: sync_fusion.py
research/: FusionNet_v1.0.0.docx  FusionNet_v2.docx
